fixed nav drawer on mobile

--- a/src/app.css
+++ b/src/app.css
@@ -59,12 +59,12 @@
 }
 
 @keyframes slideIn {
-  from {
+  0% {
     transform: translateX(100%);
   }
 
-  to {
-    transform: translateX(0);
+  100% {
+    transform: translateX(0px);
   }
 }
 
